Update cssparser code to commit 462 "No longer skip the following declarations if a css star hack was used (CSS21 and CSS3)". Align Loboevolution code to cssparser change.

--- a/parser/src/com/steadystate/css/parser/SACParserMessages_de.properties
+++ b/parser/src/com/steadystate/css/parser/SACParserMessages_de.properties
@@ -16,6 +16,7 @@ invalidMediaRule=Fehler in @media-Regel.
 invalidStyleRule=Fehler in Style-Regel.
 invalidStyleDeclaration=Fehler in Styledeklaration.
 invalidDeclaration=Fehler in Deklaration.
+invalidDeclarationStarHack=Error in declaration. ''*'' ist als erstes Zeichen einer Property nicht erlaubt.
 invalidSelectorList=Fehler in Selektorliste.
 invalidSelector=Fehler in Selektor.
 invalidSimpleSelector=Fehler in einfachem Selektor.
