--- a/parser/src/main/java/com/steadystate/css/parser/SACParserMessages_de.properties
+++ b/parser/src/main/java/com/steadystate/css/parser/SACParserMessages_de.properties
@@ -34,3 +34,4 @@ ignoringRule=Ignoriere die gesamte Regel.
 ignoringFollowingDeclarations=Ignoriere die folgenden Deklarationen in dieser Regel.
 
 tokenMgrError=Lexikalischer Fehler.
+domException=DOM Fehler: ''{0}''
