--- a/parser/src/main/java/com/steadystate/css/parser/SACParserMessages_en.properties
+++ b/parser/src/main/java/com/steadystate/css/parser/SACParserMessages_en.properties
@@ -34,3 +34,5 @@ ignoringRule=Ignoring the whole rule.
 ignoringFollowingDeclarations=Ignoring the following declarations in this rule.
 
 tokenMgrError=Lexical error.
+domException=DOM exception: ''{0}''
+
