--- a/parser/src/main/java/com/steadystate/css/parser/SACParserMessages_de.properties
+++ b/parser/src/main/java/com/steadystate/css/parser/SACParserMessages_de.properties
@@ -6,6 +6,7 @@ invalidStyleSheet=Fehler im Stylesheet.
 invalidRule=Fehler in Regel.
 invalidUnknownRule=Fehler in unbekannter At-Regel.
 invalidCharsetRule=Fehler in @charset-Regel.
+misplacedCharsetRule=Die @charset Regel muss das erste Element im Stylesheet sein.
 invalidImportRule=Fehler in @import-Regel.
 invalidImportRuleIgnored=@import-Regel muss vor allen anderen Regeln erscheinen.
 invalidImportRuleIgnored2=@import-Regel muss vor allen anderen Regeln erscheinen, au\u00dfer der @charset-Regel.
@@ -16,6 +17,7 @@ invalidMediaRule=Fehler in @media-Regel.
 invalidStyleRule=Fehler in Style-Regel.
 invalidStyleDeclaration=Fehler in Styledeklaration.
 invalidDeclaration=Fehler in Deklaration.
+invalidDeclarationInvalidChar=Fehler in Deklaration. Es wurde das ung\u00fcltige Zeichen \"{0}\" gefunden.
 invalidDeclarationStarHack=Error in declaration. ''*'' ist als erstes Zeichen einer Property nicht erlaubt.
 invalidSelectorList=Fehler in Selektorliste.
 invalidSelector=Fehler in Selektor.
@@ -34,3 +36,4 @@ ignoringRule=Ignoriere die gesamte Regel.
 ignoringFollowingDeclarations=Ignoriere die folgenden Deklarationen in dieser Regel.
 
 tokenMgrError=Lexikalischer Fehler.
+domException=DOM Fehler: ''{0}''
