Mozilla Rhino commit 3784

--- a/LoboParser/src/main/java/org/mozilla/javascript/resources/Messages.properties
+++ b/LoboParser/src/main/java/org/mozilla/javascript/resources/Messages.properties
@@ -68,6 +68,9 @@ msg.varargs.fun =\
 msg.incompat.call =\
     Method "{0}" called on incompatible object.
 
+msg.incompat.call.details =\
+    Method "{0}" called on incompatible object ({1} is not an instance of {2}).
+
 msg.bad.parms =\
     Unsupported parameter type "{0}" in method "{1}".
 
@@ -82,6 +85,9 @@ msg.no.overload =\
 
 msg.method.not.found =\
     Method "{0}" not found in "{1}".
+
+msg.method.missing.parameter =\
+    {0}: At least {1} arguments required, but only {2} passed
 
 # IRFactory
 
@@ -517,6 +523,9 @@ msg.dup.param.strict =\
 
 msg.bad.id.strict =\
     "{0}" is not a valid identifier for this use in strict mode.
+
+msg.no.unary.expr.on.left.exp =\
+    "{0}" is not allowed on the left-hand side of "**".
 
 # ScriptRuntime
 
