--- a/LoboParser/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/LoboParser/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -100,7 +100,7 @@ msg.mult.index =\
 msg.bad.for.in.destruct =\
     Left hand side of for..in loop must be an array of length 2 to accept \
     key/value pair.
-    
+
 msg.cant.convert =\
     Can''t convert to type "{0}".
 
@@ -214,7 +214,7 @@ msg.zero.quant =\
     Zero quantifier {0}
 
 msg.max.lt.min =\
-    Maximum {0} less than minimum
+    Invalid regular expression: The quantifier maximum ''{0}'' is less than the minimum ''{1}''.
 
 msg.unterm.quant =\
     Unterminated quantifier {0}
@@ -267,7 +267,7 @@ msg.var.redecl =\
 
 msg.const.redecl =\
     TypeError: redeclaration of const {0}.
-    
+
 msg.let.redecl =\
     TypeError: redeclaration of variable {0}.
 
@@ -311,6 +311,9 @@ msg.no.parm =\
 
 msg.no.paren.after.parms =\
     missing ) after formal parameters
+
+msg.parm.after.rest =\
+    parameter after rest parameter
 
 msg.no.brace.body =\
     missing '{' before function body
@@ -374,7 +377,7 @@ msg.no.semi.for =\
 
 msg.no.semi.for.cond =\
     missing ; after for-loop condition
-    
+
 msg.in.after.for.name =\
     missing in after for
 
@@ -386,7 +389,7 @@ msg.no.paren.with =\
 
 msg.no.paren.after.with =\
     missing ) after with-statement object
-    
+
 msg.no.with.strict =\
     with statements not allowed in strict mode
 
@@ -536,7 +539,7 @@ msg.no.unary.expr.on.left.exp =\
 
 # ScriptRuntime
 
-# is there a better message for this? 
+# is there a better message for this?
 # it's currently only used as a poison pill for caller, caller and arguments properties
 msg.op.not.allowed =\
     This operation is not allowed.
@@ -769,7 +772,7 @@ msg.unterminated.re.lit =\
     unterminated regular expression literal
 
 msg.invalid.re.flag =\
-    invalid flag after regular expression
+    invalid flag ''{0}'' after regular expression
 
 msg.no.re.input.for =\
     no input for {0}
@@ -881,7 +884,7 @@ msg.send.newborn =\
 
 msg.already.exec.gen =\
     Already executing generator
-    
+
 msg.StopIteration.invalid =\
     StopIteration may not be changed to an arbitrary object.
 
@@ -936,10 +939,11 @@ msg.no.new =\
 msg.map.function.not =\
   Map function is not actually a function
 
-msg.constructor.no.function \=
+msg.constructor.no.function =\
   The constructor for {0} may not be invoked as a function
 
-msg.this.not.instance \= \"this\" is not an instance of the class
+msg.this.not.instance =\
+  \"this\" is not an instance of the class
 
 # Promises
 msg.function.expected =\
@@ -951,8 +955,8 @@ msg.constructor.expected =\
 msg.promise.self.resolution =\
   Promise is being self-resolved
 
-msg.promise.capability.state \=
-Invalid promise capability state
+msg.promise.capability.state =\
+  Invalid promise capability state
 
-msg.promise.all.toobig \=
+msg.promise.all.toobig =\
   Too many inputs to Promise.all
