--- a/LoboParser/src/main/resources/org/mozilla/javascript/resources/Messages_fr.properties
+++ b/LoboParser/src/main/resources/org/mozilla/javascript/resources/Messages_fr.properties
@@ -182,7 +182,7 @@ msg.zero.quant =\
     Le quantificateur {0} est nul
 
 msg.max.lt.min =\
-    Le maximum {0} est inf\u00E9rieur au minimum
+    Expression r\u00e9guli\u00e8re invalide : Le quantificateur maximum ''{0}'' est inf\u00e9rieur au minimum ''{1}''.
 
 msg.unterm.quant =\
     Le quantificateur {0} n''a pas de limite
@@ -491,7 +491,7 @@ msg.bad.id.strict =\
 
 # ScriptRuntime
 
-# is there a better message for this? 
+# is there a better message for this?
 # it's currently only used as a poison pill for caller, caller and arguments properties
 msg.op.not.allowed =\
     Cette op\u00e9ration n''est pas autoris\u00e9e.
@@ -697,7 +697,7 @@ msg.unterminated.re.lit =\
     le litt\u00E9ral de l''expression rationnelle n''a pas de limite
 
 msg.invalid.re.flag =\
-    une expression rationnelle est suivie d''un indicateur incorrect
+    une expression rationnelle est suivie d''un indicateur incorrect ''{0}''
 
 msg.no.re.input.for =\
     il n''y a pas d''entr\u00E9e pour {0}
@@ -809,7 +809,7 @@ msg.send.newborn =\
 
 msg.already.exec.gen =\
     Le g\u00e9n\u00e9rateur est d\u00e9j\u00e0 en cours d''ex\u00e9cution
-    
+
 msg.StopIteration.invalid =\
     L''exception StopIteration ne peut pas \u00eatre chang\u00e9e en un objet arbitraire.
 
